Got following working: replace, repair, cleanup. node status, describe, connection, list, restart, seeds